# Outlyne

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  plan.md  recall_engine_implementation.md  vision_core_implementation.md
src/: __init__.py  embedder.py  logger.py  main.py  orchestrator.py  ranker.py
src/outlyne/: __init__.py
src/search/: __init__.py  base.py  ddg.py  thumbnail_utils.py  visual.py
tests/: bench_embedder.py  test_end_to_end.py  test_recall.py  test_sketch_search.py
web/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: DrawingCanvas.tsx  ResultGrid.tsx
