[project]
name = "outlyne"
version = "0.1.0"
description = "AI-powered sketch-to-image meta search engine with sub-second perceived latency."
readme = "README.md"
authors = [
    { name = "Rohit", email = "dv6510@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "blake3>=1.0.8",
    "cachetools>=6.2.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "numpy>=1.26.4",
    "onnxruntime>=1.23.2",
    "openvino>=2024.6.0",
    "openvino-dev>=2024.6.0",
    "openvino-telemetry>=2025.2.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
outlyne = "main:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "PT"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

